--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rj"
 version = "0.1.0"
-authors = ["Andrew Wasilczuk <akw@scalefactory.com>"]
+authors = ["Andrew Wasilczuk <akw@ml1.net>"]
 edition = "2018"
 
 [dependencies]
