--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ anyhow = "1.0"
 xz2 = "0.1"
 tar = "0.4"
 reqwest = "0.9"
+config = "0.10.1"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6"
