--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tar = "0.4"
 reqwest = "0.9"
 config = "0.10.1"
 serde = { version = "1.0", features = ["derive"] }
+indexmap = { version = "1.3.0", features = ["serde-1"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6"
