--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rj"
 version = "0.1.0"
-description = "FreeBSD jail manager in Rust"
+description = "Rusty FreeBSD jail manager"
 authors = ["Andrew Wasilczuk <akw@ml1.net>"]
 edition = "2018"
 
@@ -13,12 +13,13 @@ exclude = [
 
 [dependencies]
 anyhow = "1.0"
-xz2 = "0.1"
-tar = "0.4"
-reqwest = "0.9"
+clap = "2.33"
 config = "0.10.1"
-serde = { version = "1.0", features = ["derive"] }
 indexmap = { version = "1.3.0", features = ["serde-1"] }
+reqwest = "0.9"
+serde = { version = "1.0", features = ["derive"] }
+tar = "0.4"
+xz2 = "0.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6"
