--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 tar = "0.4"
 xz2 = "0.1"
+log = "0.4"
+simplelog = "^0.7.4"
 
 [dev-dependencies]
 pretty_assertions = "0.6"
