--- a/templates/jail.conf
+++ b/templates/jail.conf
@@ -1,3 +1,8 @@
 {% for line in defaults %}
     {{- line }}
 {% endfor %}
+{{ name}} {
+    {% for line in conf %}
+        {{- line }}
+{% endfor -%}
+}
