Added more test data and fixed formatting issues

--- a/templates/jail.conf
+++ b/templates/jail.conf
@@ -2,7 +2,7 @@
     {{- line }}
 {% endfor %}
 {{ name}} {
-    {% for line in conf %}
-        {{- line }}
-{% endfor -%}
+{%- for line in conf %}
+    {{ line }}
+{%- endfor %}
 }
