--- a/config.toml
+++ b/config.toml
@@ -27,16 +27,16 @@ source = "freebsd12"
 # run = false
 # provisioners = [ "shell" ]
 
-[jail.example]
+[jail.test1]
 order = 20
 source = "base"
 # provisioners = [ "puppet" ]
 
-[jail.test]
+[jail.test2]
 order = 20
 source = "base"
-[jail.test.conf]
-host_hostname = "test.jail"
+[jail.test2.conf]
+host_hostname = "test2.jail"
 allow_set_hostname = 1
 allow_raw_sockets = 1
 ip4_addr = [ "lo0|10.11.11.2/32", "10.23.23.2/32" ]
