--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ exclude = [
 [dependencies]
 anyhow = "1.0"
 clap = "2.33"
-config = "0.10.1"
 indexmap = { version = "1.3.0", features = ["serde-1"] }
+toml = { version = "0.5", preserve_order = ["indexmap"]}
 reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 tar = "0.4"
