--- a/config.toml
+++ b/config.toml
@@ -39,5 +39,5 @@ source = "base"
 host_hostname = "test2.jail"
 allow_set_hostname = 1
 allow_raw_sockets = 1
-ip4_addr = [ "lo0|10.11.11.2/32", "10.23.23.2/32" ]
+ip4_addr = [ "lo0|10.11.11.2/32", "lo0|10.23.23.2/32" ]
 allow_mount = true
