Added path parameter to jail conf

--- a/templates/jail.conf
+++ b/templates/jail.conf
@@ -1,7 +1,10 @@
 {% for line in defaults %}
     {{- line }}
 {% endfor %}
-{{ name}} {
+{{ name }} {
+{%- for line in extra_conf %}
+    {{ line }}
+{%- endfor %}
 {%- for line in conf %}
     {{ line }}
 {%- endfor %}
