--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,12 @@ reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 simplelog = "^0.7.4"
 tar = "0.4"
-toml = { version = "0.5", preserve_order = ["indexmap"]}
+toml = "0.5"
 xz2 = "0.1"
+
+[toml.features]
+preserve_order = ["indexmap"]
+
 
 [dev-dependencies]
 indoc = "0.3"
