--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 askama = "0.8"
 clap = "2.33"
 difference = "2.0.0"
+duct = "0.13.3"
 indexmap = { version = "1.3.0", features = ["serde-1"] }
 log = "0.4"
 reqwest = "0.9"
@@ -34,3 +35,4 @@ indoc = "0.3"
 lazy_static = "1.4.0"
 pretty_assertions = "0.6"
 rand = "0.7.3"
+tempfile = "3"
