--- a/testdata/config.toml
+++ b/testdata/config.toml
@@ -53,3 +53,7 @@ allow_set_hostname = 1
 allow_raw_sockets = 1
 ip4_addr = [ "lo0|10.11.11.2/32", "lo0|10.23.23.2/32" ]
 allow_mount = true
+
+[jail.exec_test]
+source = "base"
+provisioners = [ "exec" ]
