--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,26 @@ exclude = [
 [dependencies]
 anyhow = "1.0"
 askama = "0.8"
+chrono = "0.4"
 clap = "2.33"
 difference = "2.0.0"
-indexmap = { version = "1.3.0", features = ["serde-1"] }
 log = "0.4"
 reqwest = "0.9"
-serde = { version = "1.0", features = ["derive"] }
 simplelog = "^0.7.4"
 tar = "0.4"
-toml = "0.5"
 xz2 = "0.1"
 
-[toml.features]
-preserve_order = ["indexmap"]
+[dependencies.toml]
+version = "0.5"
+features = ["preserve_order"]
+
+[dependencies.indexmap]
+version = "1.3.0"
+features = ["serde-1"]
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
 
 
 [dev-dependencies]
@@ -34,5 +41,5 @@ indoc = "0.3"
 lazy_static = "1.4.0"
 pretty_assertions = "0.6"
 rand = "0.7.3"
-tempfile = "3"
 serial_test = "0.4.0"
+tempfile = "3"
