--- a/testdata/config.toml
+++ b/testdata/config.toml
@@ -67,6 +67,12 @@ allow_raw_sockets = 1
 ip4_addr = [ "lo0|10.11.11.2/32", "lo0|10.23.23.2/32" ]
 allow_mount = true
 
+[jail.pkg_test]
+source = "base"
+[jail.pkg_test.conf]
+host_hostname = "pkg_test"
+ip4_addr = [ "lo0|10.11.11.3/32" ]
+
 [jail.exec_test]
 source = "base"
 provisioners = [ "exec" ]
@@ -78,3 +84,6 @@ provisioners = [ "file" ]
 [jail.puppet_test]
 source = "base"
 provisioners = [ "puppet" ]
+[jail.puppet_test.conf]
+host_hostname = "puppet_test"
+ip4_addr = [ "lo0|10.11.11.4/32" ]
