--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ chrono = "0.4"
 clap = "2.33"
 difference = "2.0.0"
 log = "0.4"
+rand = "0.7"
+regex = "1"
 reqwest = "0.9"
 simplelog = "^0.7.4"
 tar = "0.4"
+text_io = "0.1.8"
 xz2 = "0.1"
-regex = "1"
-rand = "0.7"
 
 [dependencies.toml]
 version = "0.5"
