--- a/testdata/config.toml
+++ b/testdata/config.toml
@@ -79,8 +79,13 @@ options = "ro"
 [jail.base]
 source = "freebsd12"
 provisioners = ["resolv_conf" ]
-start = false
 enable = false
+stop_after = true
+
+[jail.stopped]
+source = "base"
+enable = false
+start = false
 
 [jail.test1]
 source = "base"
